--- a/index.html
+++ b/index.html
@@ -32,20 +32,67 @@
         </div>
       </div>
     </div>
-    <div class="main-news">
-      <img class="main-img" src="./Images/saaa.png" alt="" />
-      <div class="main-poistion">
-        <img class="main-cover" src="./Images/saa.png" alt="" />
-        <div class="image-txt">
-          <p class="txt-top">Our Stories</p>
-          <p class="txt-mid">
-            My work is a story <br />
-            of
-            <span>
-              problem <br />
-              solving.
-            </span>
-          </p>
+    <div class="carousel4">
+      <div class="carousel4-inner">
+        <div class="carousel4-item">
+          <div class="main-news">
+            <img class="main-img" src="./Images/saaa.png" alt="" />
+            <div class="main-poistion">
+              <img class="main-cover" src="./Images/saa.png" alt="" />
+              <div class="image-txt">
+                <p class="txt-top">Our Stories</p>
+                <p class="txt-mid">
+                  My work is a story <br />
+                  of
+                  <span>
+                    problem <br />
+                    solving.
+                  </span>
+                </p>
+                <div class="carousel4-dots txt-slider"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel4-item">
+          <div class="main-news">
+            <img class="main-img" src="./Images/saaa.png" alt="" />
+            <div class="main-poistion">
+              <img class="main-cover" src="./Images/saa.png" alt="" />
+              <div class="image-txt">
+                <p class="txt-top">Our Stories</p>
+                <p class="txt-mid">
+                  My work is a story <br />
+                  of
+                  <span>
+                    problem <br />
+                    solving.
+                  </span>
+                </p>
+                <div class="carousel4-dots txt-slider"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel4-item">
+          <div class="main-news">
+            <img class="main-img" src="./Images/saaa.png" alt="" />
+            <div class="main-poistion">
+              <img class="main-cover" src="./Images/saa.png" alt="" />
+              <div class="image-txt">
+                <p class="txt-top">Our Stories</p>
+                <p class="txt-mid">
+                  My work is a story <br />
+                  of
+                  <span>
+                    problem <br />
+                    solving.
+                  </span>
+                </p>
+                <div class="carousel4-dots txt-slider"></div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -154,5 +201,6 @@
       <p class="pre-footer-second">Terms & Conditions</p>
       <p class="pre-footer-third">Privacy Information Center</p>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
