--- a/index.html
+++ b/index.html
@@ -32,6 +32,29 @@
         </div>
       </div>
     </div>
+    <div class="carousel5">
+      <div class="main-header-title">Our Stories</div>
+      <div class="carousel5-inner">
+        <div class="main-header">
+          <p class="txt-mid1">
+            My work is a story of <br />
+            <span> problem solving. </span>
+          </p>
+        </div>
+        <div class="main-header">
+          <p class="txt-mid1">
+            My work is a story of <br />
+            <span> solving issues. </span>
+          </p>
+        </div>
+        <div class="main-header">
+          <p class="txt-mid1">
+            My work is a story of <br />
+            <span> slove unsolve. </span>
+          </p>
+        </div>
+      </div>
+    </div>
     <div class="carousel4">
       <div class="carousel4-inner">
         <div class="carousel4-item">
